--- a/PPTT/appsettings.json
+++ b/PPTT/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PPTTContext": "Server=(localdb)\\mssqllocaldb;Database=PPTTContext-2eef83e3-e1d2-401e-b24c-8afc3c60281c;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ConnectionSQL": "Server=(localdb)\\v11.0;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true"    
+    "ConnectionSQL": "Server=(localdb)\\v11.0;Database=PPTT;Trusted_Connection=True;MultipleActiveResultSets=true"    
   }
 }
