--- a/PPTT/PPTT.csproj
+++ b/PPTT/PPTT.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\SuperAdmin\" />
+  </ItemGroup>
+
 </Project>
