--- a/PPTT/appsettings.json
+++ b/PPTT/appsettings.json
@@ -9,6 +9,6 @@
     "ConnectionStrings": {
         //"PPTTContext": "Server=(localdb)\\mssqllocaldb;Database=PPTTContext-2eef83e3-e1d2-401e-b24c-8afc3c60281c;Trusted_Connection=True;MultipleActiveResultSets=true",
         //"ConnectionSQL": "Server=(localdb)\\v11.0;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "ConnectionSQL": "Server=(localdb)\\servidor;Database=PTBD;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "ConnectionSQL": "Server=(localdb)\\v11.0;Database=PTBD;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
