--- a/PPTT/PPTT.csproj
+++ b/PPTT/PPTT.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\Operativos\**" />
     <Compile Remove="Pages\SuperAdmin\**" />
+    <Content Remove="Pages\Operativos\**" />
     <Content Remove="Pages\SuperAdmin\**" />
+    <EmbeddedResource Remove="Pages\Operativos\**" />
     <EmbeddedResource Remove="Pages\SuperAdmin\**" />
+    <None Remove="Pages\Operativos\**" />
     <None Remove="Pages\SuperAdmin\**" />
   </ItemGroup>
 
@@ -25,10 +29,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\Operativos\" />
   </ItemGroup>
 
 </Project>
