--- a/PPTT/PPTT.csproj
+++ b/PPTT/PPTT.csproj
@@ -29,6 +29,8 @@
 
   <ItemGroup>
     <Folder Include="Pages\Operativos\" />
+    <Folder Include="wwwroot\NewFolder1\" />
+    <Folder Include="wwwroot\NewFolder\" />
   </ItemGroup>
 
 </Project>
