--- a/PPTT/PPTT.csproj
+++ b/PPTT/PPTT.csproj
@@ -37,4 +37,11 @@
     <Folder Include="wwwroot\NewFolder\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\Administradores\IndexAdminU.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
